--- a/Ubli-back/pom.xml
+++ b/Ubli-back/pom.xml
@@ -65,12 +65,12 @@
 		<!-- Remover comentários assim que o projeto estiver sendo concluído
 			(caso o comentário seja removido será necessário rodar o Docker contendo um compose.yaml que não seja vazio) -->
 
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-docker-compose</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
-		</dependency> -->
+		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
