--- a/Ubli-Front/package.json
+++ b/Ubli-Front/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.16.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
