--- a/Ubli-Front/package.json
+++ b/Ubli-Front/package.json
@@ -32,7 +32,10 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-leaflet": "^5.0.0",
+    "react-medium-image-zoom": "^5.2.14",
     "react-router-dom": "^7.5.3",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "zod": "^3.25.48"
