--- a/Ubli-back/src/main/resources/application.properties
+++ b/Ubli-back/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=acessibilidade
-storage.location=storage
+# storage.location=storage
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ubli?useSSL=false&serverTimezone=UTC
 spring.datasource.username=ubli
 spring.datasource.password=ubli_database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# spring.flyway.enabled=true
-# spring.flyway.locations=classpath:db/migration
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migrations
