Finalizado login e security

--- a/Ubli-back/src/main/resources/application.properties
+++ b/Ubli-back/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migrations
+
+jwt.secret=ubli-acessibilidade-chave-token
+jwt.expiration=3600000
